Project-206_Phonebook_app-Microservice_Architecture-K8s-Docker/Project-microservice-resolution/pb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              number: 80
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: searchserver
            port:
              number: 80
